# gcloud-poetry-test

./: README.md  main.py  pyproject.toml  requirements.txt
