[tool.poetry]
name = "gcloud-poetry-test"
version = "0.1.0"
description = ""
authors = ["Mark Gius <mgius7096@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
google-cloud-core = "1.3.0"
google-python-cloud-debugger = "^2.15"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
